--- a/app/views/common/footer_pdf.html
+++ b/app/views/common/footer_pdf.html
@@ -12,38 +12,4 @@
         }
         }
         </script>
-</head><body onload="subst();"><style type="text/css">
-.page {
-    }
-    .topage {
-    }
-    .tbl {
-        width: 100%;
-     }
-    .tbl td {
-        text-align: center;
-        width: 33%;
-        font-family: arial, helvetica, sans-serif;
-        font-size: 0.9em;
-color:#333;
-
-
-    }</style>
-<hr />
-<table border="0" cellpadding="1" cellspacing="1" class="tbl">
-	<tbody>
-		<tr>
-			<td>
-				e-mail: sgreteria@fiscosport.it</td>
-			<td>
-				fax :&nbsp;075 7823078</td>
-			<td>
-				pagina&nbsp;<span class="page">&nbsp;</span>&nbsp; di &nbsp;<span class="topage">&nbsp;</span></td>
-		</tr>
-		<tr>
-			<td colspan="3">
-				&nbsp; &nbsp;</td>
-		</tr>
-	</tbody>
-</table>
- </body></html>
+</head><body onload="subst();">Footer della fattura </body></html>
