--- a/app/views/common/footer_pdf.html
+++ b/app/views/common/footer_pdf.html
@@ -12,4 +12,6 @@
         }
         }
         </script>
-</head><body onload="subst();">Footer della fattura </body></html>
+</head><body onload="subst();"><p>
+	Footer della fattura</p>
+ </body></html>
