Invoice email like thanks

--- a/app/views/common/footer_pdf.html
+++ b/app/views/common/footer_pdf.html
@@ -12,6 +12,20 @@
         }
         }
         </script>
-</head><body onload="subst();"><p>
-	Footer della fattura</p>
- </body></html>
+</head><body onload="subst();"><hr />
+<table border="0" cellpadding="1" cellspacing="1" class="tbl">
+	<tbody>
+		<tr>
+			<td>
+				e-mail: segreteria@fiscosport.it</td>
+			<td>
+				fax :&nbsp;075 7823078</td>
+			<td>
+				pagina&nbsp;<span class="page">&nbsp;</span>&nbsp; di &nbsp;<span class="topage">&nbsp;</span></td>
+		</tr>
+		<tr>
+			<td colspan="3">
+				&nbsp; &nbsp;</td>
+		</tr>
+	</tbody>
+</table> </body></html>
