center mail invoice edit-issue

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -10,7 +10,7 @@ table.nl-grey td h1,table td h2{margin:0;}
 table.nl-grey tr{height:36px;background-color:#E5E5E5;}
 table.nl-grey td{height:36px;}
 h4{font-size: 17px; font-weight: 600; line-height: 20px;}
-h4, p{margin: 0;}
+h4, p{margin: 0; text-align: left;}
 .tex{font-size: 13px;text-align: left;font-family: "Segoe UI",Arial, Helvetica, sans-serif;}
 .tex1{font-size: 9px;font-family: "Segoe UI",Arial, Helvetica, sans-serif;}
 a{color: #006184;text-decoration: none;}
@@ -38,7 +38,7 @@ a:visited{color: #B92A24;text-decoration: none;}
             </td>
           </tr>
           <tr>
-            <td style="width:620px; padding: 2px 0px 0px 0px;" colspan="3">
+            <td style="width:620px; padding: 2px 0px 0px 0px; text-align: left;" colspan="3">
                 <%= yield %>
             </td>
           </tr>
