--- a/app/views/mailer/fee.html.erb
+++ b/app/views/mailer/fee.html.erb
@@ -1,6 +1,7 @@
-<p>
+<p style="text-align: left;">
 <%= @fee_text %>
 </p>
 <hr />
+<p style="text-align: left;">
 Vai al sito <a target="_blank" href="<%= auto_link(@fee_url) %>" ><%= Setting.app_title %> </a>.
-<hr />
+</p>
