--- a/app/views/editorial/quesito_show_copy.html.erb
+++ b/app/views/editorial/quesito_show_copy.html.erb
@@ -102,8 +102,7 @@
       <div class="clearfix"></div>
     </div>
 <% else %>
-    <h2 style="color:red;">
-      Gentile utente per porre quesiti a fiscosport occorre essere autenticati </h2>
+    <h2 style="color:red; margin:2%;"><%= l(:notice_no_logged)%></h2>
 <% end %>
 
 <%= render :partial => 'blocco_sidebar1' %>
