--- a/app/views/editorial/_quesiti.html.erb
+++ b/app/views/editorial/_quesiti.html.erb
@@ -5,7 +5,6 @@
           <div class="fs-content-layout">
             <div class="fs-content-layout-row">
               <div class="fs-layout-cell layout-item-0" style="width: 99%">
-                <h1>bbbbbbbbbbbbbbbbbbbbb</h1>
                 <% if @quesiti_news && @quesiti_news.any? %>
                     <% @quesiti_news.each do |qnews| %>
                         <%= qnews.get_state_icons_fe %>
@@ -36,8 +35,7 @@
         </div>
         <br/>
       </article>
-
-      <br/>
+                           <br/>
       <%# if @quesiti_news_stato_num  > 1%>
       <div class="clearfix"></div>
       <br/>
@@ -48,6 +46,5 @@
     <%# end %>
     </div>
 <% else %>
-    <h2 style="color:red;">
-      Gentile utente per porre quesiti a fiscosport occorre essere autenticati </h2>
+    <h2 style="color:red; margin:2%;"><%= l(:notice_no_logged)%></h2>
 <% end %>
