--- a/app/views/editorial/quesiti_all.html.erb
+++ b/app/views/editorial/quesiti_all.html.erb
@@ -53,8 +53,7 @@
     <%# end %>
     </div>
 <% else %>
-    <h2 style="color:red;">
-      Gentile utente per porre quesiti a fiscosport occorre essere autenticati </h2>
+    <h2 style="color:red; margin:2%;"><%= l(:notice_no_logged)%></h2>
 <% end %>
 
 
