--- a/app/views/editorial/quesiti_my.html.erb
+++ b/app/views/editorial/quesiti_my.html.erb
@@ -30,8 +30,7 @@
           </article>
       <% end %>
   <% else %>
-      <pre style=color:red;>
-  Gentile utente occorre essere autenticati per accedere a questa sezione.</pre>
+      <h2 style="color:red; margin:2%;"><%= l(:notice_no_logged)%></h2>
   <% end %>
 </div>
 <%= render :partial => 'blocco_sidebar1' %>
