--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -102,6 +102,7 @@
 <% else %>
 <%= render :partial => 'show_quesito_issues', :locals => {:news => @news} %>
 <% end %>
+  <!--
   <div>
   <div id="comments" style="margin-bottom:16px;">
       <h3 class="comments"><%= l(:label_comment_plural) %></h3>
@@ -126,5 +127,5 @@
             <p><%= submit_tag l(:button_add) %></p>
         <% end %>
     <% end %>
-  </div>
+  </div> -->
 </div>
