tts from website

--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -83,7 +83,8 @@
     </div>
     <div class="clearfix">&nbsp; <br/></div>
     <div class="fs-layout-cell layout-item-1">
-      <div id="fs-articolo-full ">
+      <img src="/images/tts.png" alt="speak it" title="speak it" onclick="return speak('fs-articolo-full');"/>
+      <div id="fs-articolo-full">
         <%= raw(articolo.description) %>
         <br/>
       </div>
