--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -55,8 +55,9 @@
                       <% end %>
                     </div>
                   </div>
+                  <div class="accessiblility">
                   <%= raw(articolo.summary) %>
-
+                </div>
                 </div>
                        </div>
                   <p class="fs-art-bottom-right">
