--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -30,7 +30,7 @@
       <div class="fs-image-caption-wrapper-full">
         <%= image_tag art_image(articolo, :l) %>
       </div>
-      <div class="fs-riassunto-full">
+      <div class="fs-content fs-riassunto-full">
         <p>
           <% if articolo.hide_summary? == false %>
               <%= raw(articolo.summary).html_safe %>
@@ -83,7 +83,7 @@
     </div>
     <div class="clearfix">&nbsp; <br/></div>
     <div class="fs-layout-cell layout-item-1">
-      <div id="fs-articolo-full ">
+      <div id="fs-content fs-articolo-full">
         <%= raw(articolo.description) %>
         <br/>
       </div>
