--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -1,5 +1,6 @@
 <!--usata un po' dappertutto -->
 <div class="fs-layout-cell fs-sidebar1 clearfix">
+  <%= render :partial => 'editorial/blocco_font' %>
   <%= render :partial => 'editorial/blocco_user_state' %>
   <%= render :partial => 'editorial/blocco_informa' %>
   <%= render :partial => 'editorial/blocco_edizioni' unless @block_projects.nil? %>
