--- a/app/views/editorial/_blocco_art_similari.html.erb
+++ b/app/views/editorial/_blocco_art_similari.html.erb
@@ -8,7 +8,7 @@
               <% @artsimilar.each do |articolo| %>
                 <div class="fs-content-layout">
                   <div class="fs-content-layout-row">
-                    <div class="fs-layout-cell layout-item-3" style="text-align: left;">
+                    <div class="fs-postcontent fs-layout-cell layout-item-3" style="text-align: left;">
                       <%= link_to_articolo(articolo, :title=> h(smart_truncate(articolo.subject, 120))) %>
                        <%# articolo.section.issues.count %>
                        <br/>
