--- a/app/views/editorial/_blocco_sidebar2.html.erb
+++ b/app/views/editorial/_blocco_sidebar2.html.erb
@@ -1,5 +1,6 @@
 <div class="fs-layout-cell fs-sidebar2">
   <div class="fs-layout-cell fs-sidebar2 clearfix">
+    <%= render :partial => 'editorial/blocco_font' %>
      <%= render :partial => 'blocco_art_similari' %>
     <%= render :partial => 'blocco_art_evidenziati' %>
   </div>
