--- a/app/views/editorial/profili_all.html.erb
+++ b/app/views/editorial/profili_all.html.erb
@@ -2,10 +2,10 @@
   <div class="fs-content-layout fs-chisiamo-boxminwidt">
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell post-layout-item-3">
-        <article class="fs-post-profile fs-article">
+        <article class="fs-post-profile">
           <h3 class="fs-postheader">DIRETTORI DI REDAZIONE </h3>
           <% @direttori.each do |item| %>
-              <div class="fs-chisiamo-item">
+              <div class="fs-blockcontent fs-chisiamo-item">
                    <%= link_to(item.user.my_avatar(:m), :controller => "editorial", :action => "profilo_show", :id => item.id) %>
                 <p>
                   <span class="fs-chisiamo-item-txt1">  <%= link_to((item.user.firstname + ' ' + item.user.lastname), :controller => "editorial", :action => "profilo_show", :id => item.id) %></span>
@@ -21,7 +21,7 @@
   <div class="fs-content-layout fs-chisiamo-boxminwidt">
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell post-layout-item-3">
-        <article class="fs-post-profile fs-article">
+        <article class="fs-post-profile">
           <h3 class="fs-postheader">RESPONSABILI DI REDAZIONE </h3>
           <% @responsabili.each do |item| %>
               <div class="fs-chisiamo-item">
@@ -40,7 +40,7 @@
   <div class="fs-content-layout fs-chisiamo-boxminwidt2">
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell post-layout-item-3">
-        <article class="fs-post-profile fs-article ">
+        <article class="fs-post-profile">
           <h3 class="fs-postheader">COLLABORATORI DI REDAZIONE </h3>
           <% @collaboratori.each do |item| %>
               <div class="fs-chisiamo-item2">
