--- a/app/views/editorial/evento.html.erb
+++ b/app/views/editorial/evento.html.erb
@@ -43,7 +43,7 @@
               </div>
               <div class="counter-bg-fade2"></div>
               <div class="fs-postmetadataheader">
-                <div class="fs-postheader-eventi-full">
+                <div class="fs-postheader-full fs-postheader-eventi-full">
                   <%= @articolo.subject %>  </div>
               </div>
               <div style="width:100%;">
