--- a/app/views/editorial/pages_abbonamenti.html.erb
+++ b/app/views/editorial/pages_abbonamenti.html.erb
@@ -39,7 +39,9 @@
               </div>
             </div>
             <%	end  %>
+            <div class="fs-postcontent">
             <%= raw(Setting.static_page_abbonamenti.html_safe) %>
+            </div>
           </div>
         </div>
       </div>
