--- a/app/views/editorial/pages_contattaci.html.erb
+++ b/app/views/editorial/pages_contattaci.html.erb
@@ -3,7 +3,7 @@
     <div class="fs-postcontent fs-postcontent-0 clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
-          <div class="fs-layout-cell layout-item-0" style="width: 99%">
+          <div class="fs-postcontent fs-layout-cell layout-item-0" style="width: 99%">
             <%= raw(Setting.static_page_contattaci.html_safe) %>
           </div>
         </div>
